# alembic/versions/a603b0551105_add_userrequest_and_update_user.py
@@ -1,0 +1,45 @@
+"""Add UserRequest and update User
+
+Revision ID: a603b0551105
+Revises: 92c68a1f378a
+Create Date: 2025-12-29 10:50:55.573827
+
+"""
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = 'a603b0551105'
+down_revision: Union[str, Sequence[str], None] = '92c68a1f378a'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table('user_requests',
+    sa.Column('id', sa.Uuid(), nullable=False),
+    sa.Column('email', sa.String(), nullable=False),
+    sa.Column('first_name', sa.String(), nullable=True),
+    sa.Column('last_name', sa.String(), nullable=True),
+    sa.Column('created_at', sa.DateTime(), nullable=True),
+    sa.PrimaryKeyConstraint('id')
+    )
+    op.create_index(op.f('ix_user_requests_email'), 'user_requests', ['email'], unique=True)
+    op.create_index(op.f('ix_user_requests_id'), 'user_requests', ['id'], unique=False)
+    op.add_column('users', sa.Column('is_first_login', sa.Boolean(), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('users', 'is_first_login')
+    op.drop_index(op.f('ix_user_requests_id'), table_name='user_requests')
+    op.drop_index(op.f('ix_user_requests_email'), table_name='user_requests')
+    op.drop_table('user_requests')
+    # ### end Alembic commands ###
